--- a/frontend/web/vue/vue-1/src/assets/styles/_keyframes.sass
+++ b/frontend/web/vue/vue-1/src/assets/styles/_keyframes.sass
@@ -1,3 +1,9 @@
+@keyframes fancyBorderRadius
+  0%
+    border-radius: 50%
+  100%
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%
+
 @keyframes scaleFromZeroToOne
   0%
     transform: scale(0)
